--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1486,6 +1486,7 @@ ul#selection li
 	margin-bottom: 1.5px;
 	position: relative;
 	border: 1px solid silver;
+
 }
 
 ul#selection li ul li
@@ -1493,6 +1494,19 @@ ul#selection li ul li
 	margin-bottom:-4px;
 	padding: 5px;
 	border: none;
+}
+@media(min-width: 979px)
+{
+	ul#selection li 
+	{
+
+		width: 165px;
+	}
+
+	ul#selection li ul li
+	{
+		width: 138px;
+	}
 }
 .current_selection ul.nav.nav-list li div a i{
 	float: right;
