--- a/app/views/user_mailer/send_to_friend.html.erb
+++ b/app/views/user_mailer/send_to_friend.html.erb
@@ -37,7 +37,7 @@
 		<div id="footer" style="line-height: 17px; font-family: Arial; font-size: 12px; color: rgb(68, 68, 68); background-color: rgb(255, 255, 255);">
 			<b>Want to SELL YOUR BIKE fast?</b>&nbsp;<br />
 			Advertise on bikes.bechnu.com - Includes Unlimites Photos.&nbsp;<br />
-			Click the link below for more information&nbsp;<a href="http://bikes.bechnu.com/bikes/new/" style="color: rgb(0, 104, 207); cursor: pointer;" target="_blank">http://bikes.bechnu.com/sell-your-bike/</a>
+			Click the link below for more information&nbsp;<a href="http://bikes.bechnu.com/bikes/new/" style="color: rgb(0, 104, 207); cursor: pointer;" target="_blank">http://bikes.bechnu.com/sell-my-bike/</a>
 			<hr />
 			<b>Brought to you by&nbsp;<a href="http://bikes.bechnu.com/" style="font-weight: inherit; color: rgb(0, 104, 207); cursor: pointer;" target="_blank">bikes.bechnu.com</a></b></div>
 	</body>
