--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -254,7 +254,7 @@ body
 	box-shadow: 5px 0px 15px #888888;
 	border-radius: 5px;
 	background: white;
-	margin-top: 15px;
+	
 	margin-bottom: 15px;
 }
 
@@ -1269,10 +1269,9 @@ div#bike_info.span6
 }
 #image_logo 
 {
-	border-top-left-radius: 101px;
-	border-top-right-radius: 112px;
+	
 	border-bottom-right-radius: 9px;
-	box-shadow: 16px 0px 36px rgba(7, 2, 2, 0.53);
+	
 	margin-top: 35px;
 }
 #main_page_header 
@@ -1328,6 +1327,14 @@ a#logo_link:hover
 	color:black;
 	backgroung: transparent;
 	text-decoration: none;
+}
+
+.navbar .brand {
+
+padding: 0;
+padding-bootom: 2px;
+margin-left: 0px;
+
 }
 //####################Registration page#################################################
 #edit_login_user_page
