--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
               </a>
             </li>
           </ul>
-          <a class="brand" href="/">Bikes.Bechnu</a>
+          <a class="brand" href="/"><%=image_tag "logo_top.png"%></a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to "Bikes For Sale", bikes_path%></li>
