--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1596,3 +1596,16 @@ ul#selection li.refine_search
 	padding: 0;
 	margin-bottom: -1.5px;
 }
+.other_bikes div 
+{
+	display: inline-table;
+	.text 
+	{
+		width: 35%;
+		font-size: 17px;
+	}
+	img
+	{
+		max-height: 194px;
+	}
+}
