--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -301,18 +301,18 @@
         <div class = "legen">Other Bikes from <%= @bike_spec.make%></div>
         <%@makers_bike.each do |bike|%>
           <a href= "<%=bike_spec_path(bike)%>">
-            <table>
-              <tr>
-                <td><% if !bike.pictures.last.nil?%>
+            <div class = "other_bikes">
+              <div>
+                <div><% if !bike.pictures.last.nil?%>
                   <%= image_tag bike.pictures.last.file.url(:original), size: "250x150"%>
                   <%else%>
                   <%=image_tag "default_image.jpg"%>
                   <%end%>
-                </td>
-                <td><%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant if !bike.variant.nil? %>
-                </td>
-              </tr>
-            </table>
+                </div>
+                <div class ="text"><%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant if !bike.variant.nil? %>
+                </div>
+              </div>
+            </div>
           </a>
         <%end%>
         <div class = "profile_see_all"><%= link_to "See all", bike_specs_path(make: @bike_spec.make)%></div>
