--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -85,9 +85,10 @@
             <%end%>      
            
         </div>  
-      <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="292" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
-      </div>
+      
     </div>
+    <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
+      </div>
   </div>
 </div>
 
