--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div id= "facebook_page" class= "span4">
-      <div class="fb-like-box" data-href="https://www.facebook.com/FacebookDevelopers" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+      <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
     </div>
   </div><!--row-->
 </div><!--span12-->
