--- a/app/views/terms_and_conditions/index.html.erb
+++ b/app/views/terms_and_conditions/index.html.erb
@@ -1,6 +1,118 @@
 
-<div class= "span3"></div>
-<div class= "span6" id= "edit_login_user_page">
+<div class= "span2"></div>
+<div class= "span8" id= "edit_login_user_page">
 	<div class = "legen">Terms and Conditions</div>
-	Use Wisely!!
+	Bikes Bechnu Terms of Use. These terms are effective July 1st, 2013
+<h3>Introduction.</h3>
+ <div>Welcome to bikes.bechnu.com.au ("Bikes Bechnu"). By accessing Bikes Bechnu you are agreeing to the following terms, which are designed to make sure that Bikes Bechnu works for everyone. Bikes Bechnu is provided to you by "bikesbechnu" also referred to below as "Bikes Bechnu". This policy is effective July 1st, 2013.</div>
+<div>
+Using Bikes Bechnu.As a condition of your use of Bikes Bechnu you agree that you will not:
+<ul>
+<li>violate any laws;</li>
+<li>violate the Posting Rules;</li>
+<li>post any threatening, abusive, defamatory, obscene or indecent material;</li>
+<li>be false or misleading;</li>
+<li>infringe any third-party right;</li>
+<li>distribute or contain spam, chain letters, or pyramid schemes;</li>
+<li>distribute viruses or any other technologies that may harm Bikes Bechnu or the interests or property of Bikes Bechnu users;</li>
+<li>impose an unreasonable load on our infrastructure or interfere with the proper working of Bikes Bechnu;
+copy, modify, or distribute any other person's content without their consent;</li>
+<li>use any robot spider, scraper or other automated means to access Bikes Bechnu and collect content for any purpose without our express written permission;</li>
+<li>harvest or otherwise collect information about others, including email addresses, without their consent;</li>
+
+<li>bypass measures used to prevent or restrict access to Bikes Bechnu.</li>
+</ul>
+</div>
+<div>
+You are solely responsible for all information that you submit to Bikes Bechnu and any consequences that may result from your post. We reserve the right at our discretion to refuse or delete content that we believe is inappropriate or breaching the above terms. We also reserve the right at our discretion to restrict a user's usage of the site either temporarily or permanently, or refuse a user's registration.
+
+</div>
+<div>
+<h4>Abusing Bikes Bechnu.</h4> Bikes Bechnu and the Bikes Bechnu community work together to keep the site working properly and the community safe. Please report problems, offensive content and policy breaches to us using the reporting system.
+
+</div>
+<div>
+Without limiting other remedies, we may issue warnings, limit or terminate our service, remove hosted content and take technical and legal steps to keep users off Bikes Bechnu if we think that they are creating problems or acting inconsistently with the letter or spirit of our policies. However, whether we decide to take any of these steps, remove hosted content or keep a user off Bikes Bechnu or not, we do not accept any liability for monitoring Bikes Bechnu or for unauthorized or unlawful content on Bikes Bechnu or use of Bikes Bechnu by users.
+
+</div>
+<div>
+<h4>Global Marketplace.</h4> Some of Bikes Bechnu's features may display your ad on other sites that are part of the global eBay community, like on eBay or our classifieds sites in other countries. By using Bikes Bechnu, you agree that your ads can be displayed on these other sites. The terms for our other sites are similar to these terms, but you may be subject to additional laws or other restrictions in the countries where your ad is posted. When you choose to post your ad on another site, you may be responsible for ensuring that it does not violate our other site policies. We may remove your ad if it is reported on any our sites, or if we believe it causes problems or violates any law or policy.
+
+</div>
+<div>
+<h4>Fees and Services.</h4> Using Bikes Bechnu is generally free, but we sometimes charge a fee for certain services. If the service you use incurs a fee, you'll be able to review and accept terms that will be clearly disclosed at the time you post your ad. Our fees are quoted in Nepali Rupee, and we may change them from time to time. We'll notify you of changes to our fee policy by posting such changes on the site. We may choose to temporarily change our fees for promotional events or new services; these changes are effective when we announce the promotional event or new service.
+
+</div>
+<div>
+Our fees are non-refundable, and you are responsible for paying them when they're due. If you don't, we may limit your ability to use the services. If your payment method fails or your account is past due, we may collect fees owed using other collection mechanisms.
+
+</div>
+<div>
+<h4>Content.</h4> Bikes Bechnu contains content from us, you, and other users. Bikes Bechnu is protected by copyright laws and international treaties. Content displayed on or via Bikes Bechnu is protected as a collective work and/or compilation, pursuant to copyrights laws and international conventions. You agree not to copy, distribute or modify content from Bikes Bechnu without our express written consent. You may not disassemble or decompile, reverse engineer or otherwise attempt to discover any source code contained in Bikes Bechnu. Without limiting the foregoing, you agree not to reproduce, copy, sell, resell, or exploit for any purposes any aspect of Bikes Bechnu (other than your own content). When you give us content, you are granting us and representing that you have the right to grant us, a non-exclusive, worldwide, perpetual, irrevocable, royalty-free, sub-licensable right to exercise the copyright, publicity, and database rights to that content.
+
+</div>
+<div>
+<h4>Infringement.</h4> Do not post content that infringes the rights of third parties, This includes, but is not limited to, content that infringes on intellectual property rights such as copyright and trademark (e.g. offering counterfeit items for sale). A large number of very varied products are offered on Bikes Bechnu by private individuals in Australia. Entitled parties, in particular the owners of copyright, trademark rights or other rights owned by third parties can report any offers which many infringe on their rights, and submit a request for this offer to be removed. If a legal representative of the entitled party reports this to us in the correct manner, products infringing on the intellectual property rights will be removed by Bikes Bechnu.
+
+</div>
+<div>
+<h4>Reporting an infringement:</h4>
+In order to participate in the Notice of Infringement Programme, you only need to complete a Notice of Infringement Form and fax it to Bikes Bechnu. You can use this form, complete with your signature, to report advertisements which may infringe on your property rights. The information requested in the Notice of Infringement Form is for the purpose of ensuring that the parties reporting these objects are either the entitled party or their officially authorized representative. This information must also enable Bikes Bechnu to identify the advertisement to be removed. Once we have received your correctly completed Notice of Infringement Form, you can simply send later reports to Bikes Bechnu via the e-mail address provided.
+
+</div>
+<div>
+<h4>Note:</h4> This form can only be used by the lawful owners of the intellectual property rights. "Notice of Infringement" is intended to ensure that products offered do not infringe the copyright, trademark right or other intellectual property rights of third parties. For all other questions, visitors and advertisers can get Help using Bikes Bechnu Help.
+
+</div>
+<div>
+<h4>Liability.</h4> Nothing in these terms shall limit our liability for fraudulent misrepresentation, for death or personal injury resulting from our negligence or the negligence of our agents or employees. You agree not to hold us responsible for things other users post or do.
+
+</div>
+<div>
+We do not review users' postings and are not involved in the actual transactions between users. As most of the content on Bikes Bechnu comes from other users, we do not guarantee the accuracy of postings or user communications or the quality, safety, or legality of what's offered.
+
+</div>
+<div>
+In no event do we accept liability of any description for the posting of any unlawful, threatening, abusive, defamatory, obscene or indecent information, or material of any kind which violates or infringes upon the rights of any other person, including without limitation any transmissions constituting or encouraging conduct that would constitute a criminal offense, give rise to civil liability or otherwise violate any applicable law.
+
+</div>
+<div>
+We cannot guarantee continuous, error-free or secure access to our services or that defects in the service will be corrected. While we will use reasonable efforts to maintain an uninterrupted service, we cannot guarantee this and we do not give any promises or warranties (whether express or implied) about the availability of our services.
+
+</div>
+<div>
+Accordingly, to the extent legally permitted we expressly disclaim all warranties, representations and conditions, express or implied, including those of quality, merchantability, merchantable quality, durability, fitness for a particular purpose and those arising by statute. We are not liable for any loss, whether of money (including profit), goodwill, or reputation, or any special, indirect, or consequential damages arising out of your use of Bikes Bechnu, even if you advise us or we could reasonably foresee the possibility of any such damage occurring. Some jurisdictions do not allow the disclaimer of warranties or exclusion of damages, so such disclaimers and exclusions may not apply to you.
+
+</div>
+<div>
+Despite the previous paragraph, if we are found to be liable, our liability to you or any third party (whether in contract, tort, negligence, strict liability in tort, by statute or otherwise) is limited to the greater NRS 1000.00.
+
+</div>
+<div>
+<h4>Personal Information.</h4> By using Bikes Bechnu, you agree to the collection, transfer, storage and use of your personal information by Bikes Bechnu on servers located in the United States. You also agree to receive marketing communications from us unless you tell us that you prefer not receive such communications.
+
+</div>
+<div>
+<h4>Resolution of disputes</h4>
+If a dispute arises between you and Bikes Bechnu, we strongly encourage you to first contact us directly to seek a resolution by going to the Bikes Bechnu <%=link_to " Contact US ", contacts_path%>  page. We will consider reasonable requests to resolve the dispute through alternative dispute resolution procedures, such as mediation or arbitration, as alternatives to litigation.
+
+</div>
+<div>
+<h3>General.</h3> These terms and the other policies posted on Bikes Bechnu constitute the entire agreement between Bikes Bechnu and you, superseding any prior agreements.
+
+</div>
+<div>
+To the extent permitted by applicable law, this Agreement shall be governed and construed in all respects by the laws of Nepal. You agree that any claim or dispute you may have against Bikes Bechnu.com Limited must be resolved by the courts of Nepal. You and Bikes Bechnu both agree to submit to the exclusive jurisdiction of the Nepalese Courts.
+
+</div>
+<div>
+If we don't enforce any particular provision, we are not waiving our right to do so later. If a court strikes down any of these terms, the remaining terms will survive. We may automatically assign this agreement in our sole discretion in accordance with the notice provision below.
+
+</div>
+<div>
+<h4>We may update this agreement at any time, with updates taking effect when you next post or 30 days after we post the updated policy on the site, whichever is sooner. No other amendment to this agreement will be effective unless made in writing, signed by users and by us.</h4>
+
+</div>
+<div>
+For any help with using Bikes Bechnu please see here
 </div>
