--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -34,16 +34,16 @@
     <div class = "legen">Browse by body type</div>
     <div class= "browse_body_type">
       
-        <a href = '<%=bike_specs_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
-        <a href = '<%=bike_specs_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
+        <a href = '<%=bike_specs_path(body: "Cruiser")%>' alt ="Bike Showroom Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "133x120"%>Cruiser</div></a>
+        <a href = '<%=bike_specs_path(body: "Scooter")%>' alt ="Bike Showroom Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "133x120"%>Scooter</div></a>
       
       
-        <a href = '<%=bike_specs_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
-        <a href = "<%=bike_specs_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
+        <a href = '<%=bike_specs_path(body: "Sports")%>' alt ="Bike Showroom Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "133x120"%>Sport</div></a>
+        <a href = "<%=bike_specs_path(body: 'Super Sport')%>" alt ="Bike Showroom Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "133x120"%>Super Sport</div></a>
       
       
-        <a href = "<%=bike_specs_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
-        <a href = '<%=bike_specs_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
+        <a href = '<%=bike_specs_path(body: "Standard")%>' alt ="Bike Showroom Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "133x120"%>Standard</div></a>
+        <a href = '<%=bike_specs_path(body: "Trail")%>' alt ="Bike Showroom Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "133x120"%>Trail</div></a>
        
     </div> 
   </div>
@@ -51,19 +51,19 @@
     <div class = "legen">Browse By: Top Makers</div>
       <div class= "browse_maker">
         
-          <a href = '<%=bike_specs_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "67x62"%></div></a>
-          <a href = "<%=bike_specs_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Bajaj")%>' alt ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Daelim")%>' alt ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hero Honda")%>' alt ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "67x62"%></div></a>
+          <a href = "<%=bike_specs_path(make: 'Honda')%>" alt ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "67x62"%></div></a>
         
         
-          <a href = "<%=bike_specs_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "67x62"%></div></a>
-          <a href = "<%=bike_specs_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Hyosung")%>' alt ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' alt ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Suzuki")%>' alt ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "TVS")%>' alt ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "67x62"%></div></a>
         
         
-          <a href = '<%=bike_specs_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "67x62"%></div></a>
+          <a href = '<%=bike_specs_path(make: "Yamaha")%>' alt ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "67x62"%></div></a>
           
           
           
