--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -24,12 +24,12 @@
         <div class = "main_page_browse_by">
           <div class= "legen">Browse By: Body Type</div>
           <div class= "browse_body_type">
-            <a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a>
-            <a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a>
-            <a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a>
-            <a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a>
-            <a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a>
-            <a href = '<%=bikes_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a>
+            <a href = '<%=bikes_path(body: "Cruiser")%>' alt ="Bike Sales Cruiser"><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a>
+            <a href = '<%=bikes_path(body: "Scooter")%>' alt ="Bike Sales Scooter"><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a>
+            <a href = '<%=bikes_path(body: "Sports")%>' alt ="Bike Sales Sports"><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a>
+            <a href = '<%=bikes_path(body: "Super Sport")%>' alt ="Bike Sales Super Sport"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a>
+            <a href = '<%=bikes_path(body: "Standard")%>' alt ="Bike Sales Standard"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a>
+            <a href = '<%=bikes_path(body: "Trail")%>' alt ="Bike Sales Trail"><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a>
           </div>  
         </div><!--main_page_browse_by-->
       </div>
@@ -37,15 +37,15 @@
         <div class = "main_page_browse_by">
           <div class= "legen">Browse By: Top Makers</div>
           <div class= "browse_makers">
-            <a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a>
-            <a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a>
-            <a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a>
-            <a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a>
-            <a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a>
-            <a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a>
-            <a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a>
-            <a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a>
-            <a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a>
+            <a href = '<%=bikes_path(make: "Bajaj")%>' alt ="Bike Sales Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a>
+            <a href = '<%=bikes_path(make: "Daelim")%>' alt ="Bike Sales Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a>
+            <a href = '<%=bikes_path(make: "Hero Honda")%>' alt ="Bike Sales Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a>
+            <a href = '<%=bikes_path(make: "Honda")%>' alt ="Bike Sales Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a>
+            <a href = '<%=bikes_path(make: "Hyosung")%>' alt ="Bike Sales Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a>
+            <a href = '<%=bikes_path(make: "Royal Enfield")%>' alt ="Bike Sales Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a>
+            <a href = '<%=bikes_path(make: "Suzuki")%>' alt ="Bike Sales Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a>
+            <a href = '<%=bikes_path(make: "TVS")%>' alt ="Bike Sales TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a>
+            <a href = '<%=bikes_path(make: "Yamaha")%>' alt ="Bike Sales Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a>
           </div>  
         </div><!--main_page_browse_by-->
       </div>
@@ -85,40 +85,40 @@
       <div class = "main_page_browse_by">
         <div class= "legen">Browse By: Colour</div>
         <div class="browse_colour">
-          <a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a>
+          <a href="<%=bikes_path(color: "Beige")%>" alt ="Bike Sales Beige"><div class= "color_box_beige"></div></a>
           <%= link_to "Beige", bikes_path(color: "Beige")%>
-          <a href="<%=bikes_path(color: "Black")%>"><div class= "color_box_black"></div></a>
+          <a href="<%=bikes_path(color: "Black")%>" alt ="Bike Sales Black"><div class= "color_box_black"></div></a>
           <%= link_to "Black", bikes_path(color: "Black")%>
-          <a href="<%=bikes_path(color: "Blue")%>"><div class= "color_box_blue"></div></a>
+          <a href="<%=bikes_path(color: "Blue")%>" alt ="Bike Sales Blue"><div class= "color_box_blue"></div></a>
           <%= link_to "Blue", bikes_path(color: "Blue")%>
-          <a href="<%=bikes_path(color: "Bronze")%>"><div class= "color_box_bronze"></div></a>
+          <a href="<%=bikes_path(color: "Bronze")%>" alt ="Bike Sales Bronze"><div class= "color_box_bronze"></div></a>
           <%= link_to "Bronze", bikes_path(color: "Bronze")%>
       
-          <a href="<%=bikes_path(color: "Brown")%>"><div class= "color_box_brown"></div></a>
+          <a href="<%=bikes_path(color: "Brown")%>" alt ="Bike Sales Brown"><div class= "color_box_brown"></div></a>
           <%= link_to "Brown", bikes_path(color: "Brown")%>
-          <a href="<%=bikes_path(color: "Gold")%>"><div class= "color_box_gold"></div></a>
+          <a href="<%=bikes_path(color: "Gold")%>" alt ="Bike Sales Gold"><div class= "color_box_gold"></div></a>
           <%= link_to "Gold", bikes_path(color: "Gold")%>
-          <a href="<%=bikes_path(color: "Green")%>"><div class= "color_box_green"></div></a>
+          <a href="<%=bikes_path(color: "Green")%>" alt ="Bike Sales Green"><div class= "color_box_green"></div></a>
           <%= link_to "Green", bikes_path(color: "Green")%>
-          <a href="<%=bikes_path(color: "Grey")%>"><div class= "color_box_grey"></div></a>
+          <a href="<%=bikes_path(color: "Grey")%>" alt ="Bike Sales Grey"><div class= "color_box_grey"></div></a>
           <%= link_to "Grey", bikes_path(color: "Grey")%>
               
-          <a href="<%=bikes_path(color: "Maroon")%>"><div class= "color_box_maroon"></div></a>
+          <a href="<%=bikes_path(color: "Maroon")%>" alt ="Bike Sales Maroon"><div class= "color_box_maroon"></div></a>
           <%= link_to "Maroon", bikes_path(color: "Maroon")%>
-          <a href="<%=bikes_path(color: "Orange")%>"><div class= "color_box_orange"></div></a>
+          <a href="<%=bikes_path(color: "Orange")%>" alt ="Bike Sales Orange"><div class= "color_box_orange"></div></a>
           <%= link_to "Orange", bikes_path(color: "Orange")%>
-          <a href="<%=bikes_path(color: "Pink")%>"><div class= "color_box_pink"></div></a>
+          <a href="<%=bikes_path(color: "Pink")%>" alt ="Bike Sales Pink"><div class= "color_box_pink"></div></a>
           <%= link_to "Pink", bikes_path(color: "Pink")%>
-          <a href="<%=bikes_path(color: "Purple")%>"><div class= "color_box_purple"></div></a>
+          <a href="<%=bikes_path(color: "Purple")%>" alt ="Bike Sales Purple"><div class= "color_box_purple"></div></a>
           <%= link_to "Purple", bikes_path(color: "Purple")%>
               
-          <a href="<%=bikes_path(color: "Red")%>"><div class= "color_box_red"></div></a>
+          <a href="<%=bikes_path(color: "Red")%>" alt ="Bike Sales Red"><div class= "color_box_red"></div></a>
           <%= link_to "Red", bikes_path(color: "Red")%>
-          <a href="<%=bikes_path(color: "Silver")%>"><div class= "color_box_silver"></div></a>
+          <a href="<%=bikes_path(color: "Silver")%>" alt ="Bike Sales Silver"><div class= "color_box_silver"></div></a>
           <%= link_to "Silver", bikes_path(color: "Silver")%>
-          <a href="<%=bikes_path(color: "White")%>"><div class= "color_box_white"></div></a>
+          <a href="<%=bikes_path(color: "White")%>" alt ="Bike Sales White"><div class= "color_box_white"></div></a>
           <%= link_to "White", bikes_path(color: "White")%>
-          <a href="<%=bikes_path(color: "Yellow")%>"><div class= "color_box_yellow"></div></a>
+          <a href="<%=bikes_path(color: "Yellow")%>" alt ="Bike Sales Yellow"><div class= "color_box_yellow"></div></a>
           <%= link_to "Yellow", bikes_path(color: "Yellow")%>
         </div>
       </div>
