--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -1,199 +1,157 @@
 <!--Indentation Complete-->
+
 <%= form_for @bike, :html => { :multipart => true,:class => 'form-horizontal' } do |f| %>
-  <table>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_year">Year *</label>
-          <div class="controls">
-            <%= f.select :year,BikeSpec.all.distinct(:year), as: :select,:prompt => 'Select Year',:required => true  %>
-          </div>
+  <div class = "row">  
+    <div class= "span6">
+      <div class="control-group">
+        <label class="control-label" for="bike_year">Year *</label>
+        <div class="controls">
+          <%= f.select :year,BikeSpec.all.distinct(:year), as: :select,:prompt => 'Select Year',:required => true  %>
         </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_type">Type *</label>
-            <div class="controls">
-            <%= f.select :type, options_for_select(["Dealer New", "Dealer Used", "Private Seller"]),:required => true,:prompt => 'Select Type' %>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_make">Make *</label>
+        <div class="controls">
+           <%= f.select :make, BikeSpec.all.distinct(:make), as: :select,:prompt => 'Select Make',:required => true%>
         </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_make">Make *</label>
-          <div class="controls">
-             <%= f.select :make, BikeSpec.all.distinct(:make), as: :select,:prompt => 'Select Make',:required => true%>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_model">Model *</label>
+        <div class="controls">
+          <%= f.select :model, BikeSpec.all.distinct(:model), as: :select,:prompt => 'Select model' %>
         </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :color, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.select :color, options_for_select(["Beige", "Black", "Blue", "Bronze", "Brown","Gold", "Green","Grey","Maroon", "Orange","Pink", "Purple", "Racing Colour","Red", "Silver", "Unknown", "White", "Yellow"]),:prompt => 'Select Colour',:required => true %>
-          </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :variant, :class => 'control-label' %>
+        <div class="controls">
+         <%= f.select :variant, BikeSpec.all.distinct(:variant), as: :select,:prompt => 'Select variant'%>
         </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_model">Model *</label>
-          <div class="controls">
-            <%= f.select :model, BikeSpec.all.distinct(:model), as: :select,:prompt => 'Select model' %>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_price">Price *</label>
+        <div class="controls">
+          <%= f.text_field :price, :class => 'text_field',:required => true %>
         </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :odometer, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_field :odometer, :class => 'text_field' %>
-          </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :address, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_area :address, :class => 'textarea', rows: "2" %>
         </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <%= f.label :variant, :class => 'control-label' %>
-          <div class="controls">
-           <%= f.select :variant, BikeSpec.all.distinct(:variant), as: :select,:prompt => 'Select variant'%>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_city">City *</label>
+        <div class="controls">
+         <%= f.select :location, options_for_select(["Kathmandu", "Latitpur", "Bhaktapur"]),:prompt => 'Select City',:class => "required" %>
         </div>
-      </td>
-      <td><div class="control-group">
-          <%= f.label :engine_capacity, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_field :engine_capacity, :class => 'text_field' %>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_phone">Contact Name *</label>
+        <div class="controls">
+          <%= f.text_field :contact_name, :class => 'text_field',:required => true %>
         </div>
-      </td>
-    </tr>
-    <tr>
-      <td> 
-        <div class="control-group">
-          <label class="control-label" for="bike_price">Price *</label>
-          <div class="controls">
-            <%= f.text_field :price, :class => 'text_field',:required => true %>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_phone">Phone *</label>
+        <div class="controls">
+          <%= f.text_field :phone, :class => 'text_field',:required => true %>
         </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :rego_no, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_field :rego_no, :class => 'text_field' %>
-          </div>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <%= f.label :address, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_area :address, :class => 'textarea', rows: "2" %>
-          </div>
-        </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :reg_expiry, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_field :reg_expiry, :class => 'text_field' %>
-          </div>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_city">City *</label>
-          <div class="controls">
-           <%= f.select :location, options_for_select(["Kathmandu", "Latitpur", "Bhaktapur"]),:prompt => 'Select City',:class => "required" %>
-          </div>
-        </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :vin_no, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_field :vin_no, :class => 'text_field' %>
-          </div>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_phone">Contact Name *</label>
-          <div class="controls">
-            <%= f.text_field :contact_name, :class => 'text_field',:required => true %>
-          </div>
-        </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_phone">Phone *</label>
-          <div class="controls">
-            <%= f.text_field :phone, :class => 'text_field',:required => true %>
-          </div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div class="control-group">
-          <label class="control-label" for="bike_phone">Comment </label>
-          <div class="controls">
-            <%= f.text_field :comment, :class => 'text_field' %>
-          </div>
-        </div>
-      </td>
-      <td>
-        <div class="control-group">
-          <%= f.label :description, :class => 'control-label' %>
-          <div class="controls">
-            <%= f.text_area :description, :class => 'textarea', rows: "3" %>
-          </div>
-        </div>
-      </td>
-    </tr>
-  </table>
+      </div>
+    </div>
 
-  
-  <div class="control-group">
-    <%= f.label :attach_images, :class => 'control-label' %>
-    <div class="controls">
-     <%= file_field_tag('bike_pictures_attributes_file', :html => {:multipart => true},multiple: true, name: "bike[pictures_attributes][][file]") %><br>
-     #Hold Ctrl button to select mutple images
+
+    <div class= "span5">
+      <div class="control-group">
+        <label class="control-label" for="bike_type">Type *</label>
+          <div class="controls">
+          <%= f.select :type, options_for_select(["Dealer New", "Dealer Used", "Private Seller"]),:required => true,:prompt => 'Select Type' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :color, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.select :color, options_for_select(["Beige", "Black", "Blue", "Bronze", "Brown","Gold", "Green","Grey","Maroon", "Orange","Pink", "Purple", "Racing Colour","Red", "Silver", "Unknown", "White", "Yellow"]),:prompt => 'Select Colour',:required => true %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :odometer, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :odometer, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :engine_capacity, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :engine_capacity, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :rego_no, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :rego_no, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :reg_expiry, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :reg_expiry, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :vin_no, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :vin_no, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="bike_phone">Comment </label>
+        <div class="controls">
+          <%= f.text_field :comment, :class => 'text_field' %>
+        </div>
+      </div>
+       <div class="control-group">
+        <%= f.label :description, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_area :description, :class => 'textarea', rows: "3" %>
+        </div>
+      </div>
     </div>
   </div>
 
-  <%if !params[:id].nil?%>
-    <div class="control-group">
-     <label class ="control-label">Your existing pictures:</label>
+  <div class = "row">
+    <div class = "span12">  
+      <div class="control-group">
+        <%= f.label :attach_images, :class => 'control-label' %>
+        <div class="controls">
+         <%= file_field_tag('bike_pictures_attributes_file', :html => {:multipart => true},multiple: true, name: "bike[pictures_attributes][][file]") %><br>
+         #Hold Ctrl button to select mutple images
+        </div>
+      </div>
+
+      <%if !params[:id].nil?%>
+        <div class="control-group">
+         <label class ="control-label">Your existing pictures:</label>
+        </div>
+        <% if !@bike.pictures.empty?%>
+          <ul class = "image_list">
+            <%@bike.pictures.each do |image| %>
+            <li><a id= 'delete_picture' data-toggle="tooltip" data-placement="top" title="Click to Delete"><%= image_tag image.file.url(:thumb), id: image.id %></a></li>
+            <% end %>
+          </ul>
+        <%end%>
+      <% end %>
+      <div class="control-group">
+        <div class="controls">
+        <input id="check" type="checkbox" required="required" /> I have read and agree to all <%= link_to "Terms and Conditions ", terms_and_conditions_path%> of Bikes.bechnu.com
+      </div>
+      </div>
+      
+      <div class="form-actions">
+        <%= f.submit nil, :class => 'btn btn-primary' %>
+        <%= link_to t('.cancel', :default => t("helpers.links.cancel")), bikes_path, :class => 'btn' %>
+      </div>
     </div>
-    <% if !@bike.pictures.empty?%>
-      <ul class = "image_list">
-        <%@bike.pictures.each do |image| %>
-        <li><a id= 'delete_picture' data-toggle="tooltip" data-placement="top" title="Click to Delete"><%= image_tag image.file.url(:thumb), id: image.id %></a></li>
-        <% end %>
-      </ul>
-    <%end%>
-  <% end %>
-  <div class="control-group">
-    <div class="controls">
-    <input type="checkbox" required="required" /> I have read and agree to all <%= link_to "Terms and Conditions ", terms_and_conditions_path%> of Bikes.bechnu.com
-  </div>
-  </div>
-  
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")), bikes_path, :class => 'btn' %>
-  </div>
+  </div>  
 <% end %>
 
 <script type="text/javascript">
