--- a/app/views/bikes/_search_bikes.html.erb
+++ b/app/views/bikes/_search_bikes.html.erb
@@ -2,7 +2,7 @@
 <div class="search_bike_table">
   <% @bikees.each do |bike| %>
     <div class= "search_result_div">
-      <a href="<%= bike_path(bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type] ) %>">
+      <a href="<%= bike_path(bike, sort: params[:sort], :direction => params[:direction], body: params[:body], make: params[:make], model: params[:model], color: params[:color],type: params[:type] ) %>" alt ="Bike Sales <%=bike.year.to_s+" "+bike.make+" "+bike.model%>">
         <div class="row">
           <div class= "span5"> 
             <% if bike.pictures.empty?%>
@@ -37,9 +37,11 @@
                 <div  class = 'btn btn-inverse'> View bike 
                 </div>
               </div>
-              <div class = "comment">
-                &ldquo; <%= bike.comment%> &rdquo;
-              </div>
+              <%if bike.comment.nil?%>
+                <div class = "comment">
+                  &ldquo; <%= bike.comment%> &rdquo;
+                </div>
+              <%end%>
             </div>  
           </div> <!-- span7 Summary of the searched bike --> 
         </div>
