--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -1,6 +1,7 @@
-<%- model_class = @bike.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
-                                   :default => "Edit #{model_class.model_name.human}") %></h1>
-</div>
+
+<div class = "bike_new_page">
+
+  <div class = "legen">Edit Your Bike AD</div>
+
 <%= render :partial => 'form' %>
+</div>
