--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -49,9 +49,11 @@
     </div>
     <div class="fb-like" data-send="true" data-layout="button_count" data-width="45" data-show-faces="false">
     </div>
+    <%if !@bike.pictures.empty? %>
     <div class = "picture">
-      <%= image_tag @bike.pictures.last.file.url(:original), id: "bike_picture" if !@bike.pictures.empty? %>
+      <%= image_tag @bike.pictures.last.file.url(:original), id: "bike_picture" %>
     </div>
+    <%end%>
     <% if !@bike.pictures.empty?%>
       <ul class = "image_list">
         <%@bike.pictures.each do |image| %>
@@ -78,7 +80,7 @@
         </tr>
         <tr>
           <th>Price:<th> 
-          <td>RS. <%=@bike.price%></td>
+          <td><%= number_to_currency(@bike.price,:unit => "Rs ",:precision => 0) %></td>
         </tr>
         <tr>
           <th>Variant:<th> 
@@ -93,8 +95,12 @@
           <td><%=@bike.color%></td>
         </tr>
         <tr>
+            <th>Odometer:<th> 
+            <td><%=@bike.odometer%> Km</td>
+          </tr>
+        <tr>
           <th>Engine Capacity:<th> 
-          <td><%=@bike.engine_capacity%></td>
+          <td><%=@bike.engine_capacity%> cc</td>
         </tr>
         <tr>
           <th>Registration Plate No:<th> 
