--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -1,4 +1,4 @@
-<a href="/" id="logo_link" alt ="Bike Sales Nepal"><div class= "logo">
+<a href="/" id="logo_link" title ="Bike Sales Nepal"><div class= "logo">
 
      <!--       <div class= "span3">
             	
